# aoc-2023

./: .clang-format  CMakeLists.txt  aoc.cpp  aoc.h  range.h
days/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  07.cpp  08.cpp
